---
source: crates/codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

@a = global [3 x i32] zeroinitializer
@b = global [2 x [3 x [4 x i32]]] [[3 x [4 x i32]] [[4 x i32] [i32 1, i32 2, i32 3, i32 4], [4 x i32] [i32 5, i32 0, i32 0, i32 0], [4 x i32] [i32 6, i32 0, i32 0, i32 0]], [3 x [4 x i32]] [[4 x i32] [i32 7, i32 8, i32 0, i32 0], [4 x i32] zeroinitializer, [4 x i32] zeroinitializer]]
@d = global [2 x float] [float 0x3FF1C28F60000000, float 0.000000e+00]
@g = global [2 x i32] [i32 1, i32 2]

define i32 @main() {
entry:
  %b1 = alloca [2 x i32], align 4
  %a = alloca [3 x i32], align 4
  %e = alloca float, align 4
  %c = alloca i32, align 4
  %b = load i32, ptr getelementptr ([2 x [3 x [4 x i32]]], ptr @b, i32 0, i32 1, i32 0, i32 1), align 4
  store i32 %b, ptr %c, align 4
  %d = load float, ptr @d, align 4
  store float %d, ptr %e, align 4
  store [3 x i32] [i32 1, i32 2, i32 3], ptr %a, align 4
  store [2 x i32] zeroinitializer, ptr %b1, align 4
  %idx.gep = getelementptr [2 x i32], ptr %b1, i32 0, i32 0
  store i32 1, ptr %idx.gep, align 4
  %arr.gep = getelementptr [3 x i32], ptr %a, i32 0, i32 1
  %a2 = load i32, ptr %arr.gep, align 4
  %idx.gep3 = getelementptr [2 x i32], ptr %b1, i32 0, i32 1
  store i32 %a2, ptr %idx.gep3, align 4
  ret i32 0
}
